c4prj3_finish/grade.txt
Grading at Sun 19 Nov 2023 10:42:04 PM UTC
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3    -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3    -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3    -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3    -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3    -c -o input.o input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3    -c -o main.o main.c
main.c: In function ‘monte_carlo_trial’:
main.c:23:18: error: statement with no effect [-Werror=unused-value]
   23 |    winning_index - i;
      |    ~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
make: *** [<builtin>: main.o] Error 1
make failed

Overall Grade: F
